[update]: tsconfig.json 못찾는 문제 .vscode/settings.json 내용 추가로 해결

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,9 +4,9 @@
   "sideEffects": [
     "**/*.css"
   ],
-  "files": [
-    "dist"
-  ],
+  "exports": {
+    "./styles.css": "./src/styles.css"
+  },
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
