[chore]: shared 에 index.ts 생성 package.json 에 exports 설정

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,9 +5,10 @@
     "**/*.css"
   ],
   "exports": {
-    "./styles.css": "./src/styles.css"
+    "./styles.css": "./src/styles.css",
+    "./components": "./src/components/index.ts"
   },
-  "main": "index.ts",
+  "main": "./index.ts",
   "license": "MIT",
   "scripts": {
     "build": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
